--- a/Dockerfile.test_debug
+++ b/Dockerfile.test_debug
@@ -16,6 +16,8 @@ RUN go install github.com/go-delve/delve/cmd/dlv@latest
 # Copy the source from the current directory to the working directory inside the container
 COPY . .
 
-RUN go build -gcflags "all=-N -l" -o /realchat
+# Build the application with debugging flags
+RUN go test -gcflags "all=-N -l" -o /realchat
 
-CMD ["dlv", "--listen=:2345", "--headless=true", "--api-version=2", "--accept-multiclient", "exec", "/realchat"]
+# Default command to run the dlv debugger on the test binary
+CMD ["dlv", "test", "github.com/cassiozareck/realchat/chat", "--listen=:2345", "--headless", "--api-version=2", "--accept-multiclient"]
