--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - postgres-db:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-  goapp:
+  app:
     environment:
       POSTGRES_PORT: "5432"
       POSTGRES_USER: ${POSTGRES_USER}
@@ -24,7 +24,7 @@ services:
       - "8080:8080"
     depends_on:
       - postgres
-  gotest:
+  test:
     environment:
       POSTGRES_PORT: "5432"
       POSTGRES_USER: ${POSTGRES_USER}
@@ -35,7 +35,7 @@ services:
       dockerfile: Dockerfile.test
     depends_on:
       - postgres
-  godebug:
+  debug:
     ports:
       - "2345:2345"
     environment:
@@ -52,7 +52,23 @@ services:
       dockerfile: Dockerfile.debug
     depends_on:
       - postgres
-
+  test_debug:
+    ports:
+      - "2345:2345"
+    environment:
+      POSTGRES_PORT: "5432"
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    security_opt:
+      - apparmor:unconfined
+    cap_add:
+      - SYS_PTRACE
+    build:
+      context: .
+      dockerfile: Dockerfile.test_debug
+    depends_on:
+      - postgres
 
 volumes:
   postgres-db:
