Fixed time SQL query, added readme

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,20 @@ services:
     container_name: postgres
     image: postgres:alpine
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: user 
+      POSTGRES_PASSWORD: 123
+      POSTGRES_DB: chatdb
     volumes:
       - postgres-db:/var/lib/postgresql/data
+      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     ports:
       - "5432:5432"
   app:
     environment:
       POSTGRES_PORT: "5432"
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: 123
+      POSTGRES_DB: chatdb
     build:
       context: .
       dockerfile: Dockerfile
